--------------------------------------------------------------------------------
Fusion 1.210 - February 28th, 2004
--------------------------------------------------------------------------------
- 02-12-04: Merged Colus's Cloaking Fix, my bad before. [Darkhelmet]
- 02-12-04: Fixed Passive weapon skills, now display amount of ATK increased. [Darkhelmet]
- 02-11-04: Fixed SQL-Crash when viewing Guild information. [AlexKreuz]
- 02-11-04: Fusion now allows editing Player and Character Data while Fusion is running. [AlexKreuz]
- 02-11-04: Fixed being able to Pharmacy w/o books. [Colus]
- 02-10-04: Added SQL CharacterDelete Check. [AlexKreuz]
- 02-10-04: Edited a few default INI options for ease of use. [AlexKreuz]
- 02-10-04: Updated & Cleaned up MySQL Code. [AlexKreuz]
- 02-10-04: Added Michen's Beta MySQL Version. [AlexKreuz]
- 02-10-04: Fixed Bug #256, Backstab now works PvP. [Darkhelmet]
- 02-10-04: Fixed Bug #147, Monsters cannot cast while silenced. [Darkhelmet]
- 02-09-04: Applied Pathfinding Algorithm v2.0 to Monsters' Target Finding procedures. [AlexKreuz]
- 02-09-04: Updated Poison Effect PvP, just needs to reduce HP now. [Darkhelmet]
- 02-09-04: Updated Venom Dust PvP. [Darkhelmet]
- 02-08-04: Fixed Bug #455, MDEF can now stack from items. [Darkhelmet]
- 02-08-04: Added Music to Bard SKills. [Darkhelmet]
- 02-08-04: Updated Stone Curse PvP, not working fully. [Darkhelmet]
- 02-08-04: Updated Frost Driver PvP. [Darkhelmet]
- 02-08-04: Updated Status Effects on players, not perfect yet. [Darkhelmet]
- 02-08-04: Update SP and Hp regen formula to match Kro episode 6. [Oatmeal + Darkhelmet]
- 02-08-04: Fixed bug that Ankle Snar won't trap monster after player's attack. [beita]
- 02-08-04: Fixed Magnus Exorcismus effect time. [beita]
- 02-08-04: Fixed Quagmire effect on monsters. [beita]
- 02-08-04: Fixed Pneuma/Warp/Other Crashes when target is in a Party. [AlexKreuz]
- 02-07-04: Potion Effects can now be seen by other players. [AlexKreuz]